# prediction-and-control-with-function-approximation

./: README.md  pyproject.toml
A1 (Week 1)/: assignment.ipynb
A2 (Week 2)/: assignment.ipynb
A2 (Week 2)/results/: RMSVE_td_agent.npz  V_td_agent.npy
A4 (Week 4)/: assignment.ipynb
