[tool.poetry]
name = "func-approx-rl"
version = "0.1.0"
description = ""
authors = ["Marc Svensson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
jdc = "^0.0.9"
tqdm = "^4.66.1"
ipykernel = "^6.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
